--- a/src/app/ingestar/home/home.page.html
+++ b/src/app/ingestar/home/home.page.html
@@ -37,7 +37,7 @@
 
   <!--*********** Rechercher par service ***********-->
   <ion-item lines="none" class="nomarg">
-    <h1 class="main-header5">Rechercher par service</h1>
+    <h1 class="main-header5">Rechercherer par service</h1>
   </ion-item>
   <!-- liste des services prestés  -->
   <ion-slides
